--- a/index.css
+++ b/index.css
@@ -1,7 +1,25 @@
 #logo {
-	max-width:180%;
-	max-height:180%;
+	max-width:100%;
+	max-height:100%;
 
 }
 
+@font-face {
+    font-family: "My Custom Font Bold";
+    src: url(fonts/SourceSansPro-Bold.woff);
+}
+
+@font-face {
+    font-family: "My Custom Font Light";
+    src: url(fonts/SourceSansPro-Light.woff);
+}
+
+.navbar-default .navbar-nav>li>a { 
+    font-family: "My Custom Font Light";
+    font-size: 20px;
+}
+
+body
+{
+}
 
