--- a/index.css
+++ b/index.css
@@ -4,6 +4,13 @@
 
 }
 
+.navbar-default{
+  opacity: 0.9;
+  background-image:none;
+  border-color:transparent;
+  box-shadow:none;
+}
+
 @font-face {
     font-family: "My Custom Font Bold";
     src: url(fonts/SourceSansPro-Bold.woff);
@@ -17,9 +24,154 @@
 .navbar-default .navbar-nav>li>a { 
     font-family: "My Custom Font Light";
     font-size: 20px;
+    font-weight: bold;
 }
 
-body
+#index_body
 {
+	background-image: url(images/scroll_home.jpg);
 }
 
+
+img
+{
+ width:auto;
+ box-shadow:0px 0px 20px #cecece;
+ -moz-transform: scale(0.7);
+ -moz-transition-duration: 0.6s; 
+ -webkit-transition-duration: 0.6s;
+ -webkit-transform: scale(0.7);
+ 
+ -ms-transform: scale(0.7);
+ -ms-transition-duration: 0.6s; 
+  border: none;
+     
+}
+img:hover
+{
+  box-shadow: 20px 20px 20px #dcdcdc;
+ -moz-transform: scale(0.8);
+ -moz-transition-duration: 0.6s;
+ -webkit-transition-duration: 0.6s;
+ -webkit-transform: scale(0.8);
+ 
+ -ms-transform: scale(0.8);
+ -ms-transition-duration: 0.6s;
+ 
+}
+
+#myImg {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+#myImg:hover {opacity: 0.7;}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    top:10%;
+    left:20%;
+    width: 60%; /* Full width */
+    height: 80%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (image) */
+.modal-content {
+	top:5%;
+    margin: auto;
+    display: block;
+    max-height: 100%;
+}
+
+
+/* Add Animation */
+.modal-content, #caption {
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+    from {-webkit-transform:scale(0)}
+    to {-webkit-transform:scale(100%)}
+}
+
+@keyframes zoom {
+    from {transform:scale(0)}
+    to {transform:scale(100%)}
+}
+
+/* The Close Button */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* The Next Button */
+.next {
+    position: absolute;
+    top: 50%;
+    right: 0%;
+    color: #333;
+    font-size: 20px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.next:hover,
+.next:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* The Privious Button */
+.previous {
+    position: absolute;
+    top: 50%;
+    left: 0%;
+    color: #333;
+    font-size: 20px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.previous:hover,
+.previous:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#imgButton {
+	background: transparent;
+	border: none !important;
+    font-size:0;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+    .modal-content {
+        width: 100%;
+    }
+}
